<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="tech.demur.dchcamera.MainViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.PresetFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/filename"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:hint="@string/file_name"
                    app:error="@{model.errorFilenameMessage}"
                    app:helperText="@string/required"
                    app:helperTextEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_max="380dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:afterTextChanged="@{model.afterTextChangedName}"
                        android:singleLine="true"
                        android:text="@={model.filename}" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="8dp"
                    android:text="@string/duration_label"
                    app:layout_constraintBottom_toTopOf="@id/duration"
                    app:layout_constraintStart_toStartOf="@id/filename"
                    app:layout_constraintTop_toBottomOf="@id/duration" />

                <TextView
                    android:id="@+id/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_corners"
                    android:backgroundTint="#FFDDDDDD"
                    android:gravity="end"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryText"
                    app:duration="@{model.slider}"
                    app:layout_constraintEnd_toEndOf="@id/filename"
                    app:layout_constraintTop_toBottomOf="@id/filename"
                    tools:text="2:15" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/slider"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:stepSize="1.0"
                    android:value="@={model.slider}"
                    android:valueFrom="15.0"
                    android:valueTo="180.0"
                    app:layout_constraintEnd_toEndOf="@id/filename"
                    app:layout_constraintStart_toStartOf="@id/filename"
                    app:layout_constraintTop_toBottomOf="@id/duration"
                    app:tickVisible="false" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="16dp"
            android:contentDescription="@string/fab_content_description"
            android:enabled="@{model.fabEnabled}"
            android:text="@string/fab_record"
            app:icon="@android:drawable/presence_video_online" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>